doc/latex/create_doc_gen.c
/* A recursive-descent parser generated by peg 0.1.9 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 20
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( ctx->begin= ctx->pos, 1)
#endif
#ifndef YY_END
#define YY_END		( ctx->end= ctx->pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *ctx, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *buf;
  int       buflen;
  int       pos;
  int       limit;
  char     *text;
  int       textlen;
  int       begin;
  int       end;
  int       textmax;
  yythunk  *thunks;
  int       thunkslen;
  int       thunkpos;
  YYSTYPE   yy;
  YYSTYPE  *val;
  YYSTYPE  *vals;
  int       valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext yyctx0;
yycontext *yyctx= &yyctx0;
#endif

YY_LOCAL(int) yyrefill(yycontext *ctx)
{
  int yyn;
  while (ctx->buflen - ctx->pos < 512)
    {
      ctx->buflen *= 2;
      ctx->buf= (char *)realloc(ctx->buf, ctx->buflen);
    }
  YY_INPUT((ctx->buf + ctx->pos), yyn, (ctx->buflen - ctx->pos));
  if (!yyn) return 0;
  ctx->limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *ctx)
{
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  ++ctx->pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *ctx, int c)
{
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  if ((unsigned char)ctx->buf[ctx->pos] == c)
    {
      ++ctx->pos;
      yyprintf((stderr, "  ok   yymatchChar(ctx, %c) @ %s\n", c, ctx->buf+ctx->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(ctx, %c) @ %s\n", c, ctx->buf+ctx->pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *ctx, char *s)
{
  int yysav= ctx->pos;
  while (*s)
    {
      if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
      if (ctx->buf[ctx->pos] != *s)
        {
          ctx->pos= yysav;
          return 0;
        }
      ++s;
      ++ctx->pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *ctx, unsigned char *bits)
{
  int c;
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  c= (unsigned char)ctx->buf[ctx->pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++ctx->pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", ctx->buf+ctx->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", ctx->buf+ctx->pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *ctx, yyaction action, int begin, int end)
{
  while (ctx->thunkpos >= ctx->thunkslen)
    {
      ctx->thunkslen *= 2;
      ctx->thunks= (yythunk *)realloc(ctx->thunks, sizeof(yythunk) * ctx->thunkslen);
    }
  ctx->thunks[ctx->thunkpos].begin=  begin;
  ctx->thunks[ctx->thunkpos].end=    end;
  ctx->thunks[ctx->thunkpos].action= action;
  ++ctx->thunkpos;
}

YY_LOCAL(int) yyText(yycontext *ctx, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (ctx->textlen < (yyleng + 1))
	{
	  ctx->textlen *= 2;
	  ctx->text= (char *)realloc(ctx->text, ctx->textlen);
	}
      memcpy(ctx->text, ctx->buf + begin, yyleng);
    }
  ctx->text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *ctx)
{
  int pos;
  for (pos= 0;  pos < ctx->thunkpos;  ++pos)
    {
      yythunk *thunk= &ctx->thunks[pos];
      int yyleng= thunk->end ? yyText(ctx, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, ctx->text));
      thunk->action(ctx, ctx->text, yyleng);
    }
  ctx->thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *ctx)
{
  if ((ctx->limit -= ctx->pos))
    {
      memmove(ctx->buf, ctx->buf + ctx->pos, ctx->limit);
    }
  ctx->begin -= ctx->pos;
  ctx->end -= ctx->pos;
  ctx->pos= ctx->thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *ctx, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(ctx);
      yyCommit(ctx);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *ctx, char *text, int count)  { ctx->val += count; }
YY_LOCAL(void) yyPop(yycontext *ctx, char *text, int count)   { ctx->val -= count; }
YY_LOCAL(void) yySet(yycontext *ctx, char *text, int count)   { ctx->val[count]= ctx->yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(ctx, yythunkpos0)

YY_RULE(int) yy_comment(yycontext *ctx); /* 20 */
YY_RULE(int) yy_contentline(yycontext *ctx); /* 19 */
YY_RULE(int) yy_whitespace(yycontext *ctx); /* 18 */
YY_RULE(int) yy_modifiers(yycontext *ctx); /* 17 */
YY_RULE(int) yy_funcargs(yycontext *ctx); /* 16 */
YY_RULE(int) yy_funcnametype(yycontext *ctx); /* 15 */
YY_RULE(int) yy_functionfooter(yycontext *ctx); /* 14 */
YY_RULE(int) yy_functionheader(yycontext *ctx); /* 13 */
YY_RULE(int) yy_macroheader(yycontext *ctx); /* 12 */
YY_RULE(int) yy_EOL(yycontext *ctx); /* 11 */
YY_RULE(int) yy_linecontent(yycontext *ctx); /* 10 */
YY_RULE(int) yy_content(yycontext *ctx); /* 9 */
YY_RULE(int) yy_sectiontitle(yycontext *ctx); /* 8 */
YY_RULE(int) yy_blankline(yycontext *ctx); /* 7 */
YY_RULE(int) yy_stars(yycontext *ctx); /* 6 */
YY_RULE(int) yy_function(yycontext *ctx); /* 5 */
YY_RULE(int) yy_groupopening(yycontext *ctx); /* 4 */
YY_RULE(int) yy_comments(yycontext *ctx); /* 3 */
YY_RULE(int) yy_group(yycontext *ctx); /* 2 */
YY_RULE(int) yy_start(yycontext *ctx); /* 1 */

YY_ACTION(void) yy_1_content(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_content\n"));
  
    fprintf(out, "%.*s", yyleng, yytext);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_macroheader(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_macroheader\n"));
  
    printfuncheader(yytext, yyleng);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_functionheader(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_functionheader\n"));
  printfuncheader(yytext, yyleng);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_sectiontitle(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_sectiontitle\n"));
  
    fprintf(out, "\\section{%.*s}\n", yyleng, yytext);;
#undef yythunkpos
#undef yypos
#undef yy
}

YY_RULE(int) yy_comment(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "comment"));  if (!yymatchString(ctx, "/*")) goto l1;
  l2:;	
  {  int yypos3= ctx->pos, yythunkpos3= ctx->thunkpos;
  {  int yypos4= ctx->pos, yythunkpos4= ctx->thunkpos;  if (!yymatchString(ctx, "*/")) goto l4;  goto l3;
  l4:;	  ctx->pos= yypos4; ctx->thunkpos= yythunkpos4;
  }  if (!yymatchDot(ctx)) goto l3;  goto l2;
  l3:;	  ctx->pos= yypos3; ctx->thunkpos= yythunkpos3;
  }  if (!yymatchString(ctx, "*/")) goto l1;
  yyprintf((stderr, "  ok   %s @ %s\n", "comment", ctx->buf+ctx->pos));
  return 1;
  l1:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "comment", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_contentline(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "contentline"));  if (!yymatchString(ctx, "    ")) goto l5;  if (!yy_linecontent(ctx)) goto l5;  if (!yy_EOL(ctx)) goto l5;
  yyprintf((stderr, "  ok   %s @ %s\n", "contentline", ctx->buf+ctx->pos));
  return 1;
  l5:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "contentline", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_whitespace(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "whitespace"));
  {  int yypos9= ctx->pos, yythunkpos9= ctx->thunkpos;  if (!yymatchChar(ctx, ' ')) goto l10;  goto l9;
  l10:;	  ctx->pos= yypos9; ctx->thunkpos= yythunkpos9;  if (!yymatchChar(ctx, '\t')) goto l6;
  }
  l9:;	
  l7:;	
  {  int yypos8= ctx->pos, yythunkpos8= ctx->thunkpos;
  {  int yypos11= ctx->pos, yythunkpos11= ctx->thunkpos;  if (!yymatchChar(ctx, ' ')) goto l12;  goto l11;
  l12:;	  ctx->pos= yypos11; ctx->thunkpos= yythunkpos11;  if (!yymatchChar(ctx, '\t')) goto l8;
  }
  l11:;	  goto l7;
  l8:;	  ctx->pos= yypos8; ctx->thunkpos= yythunkpos8;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "whitespace", ctx->buf+ctx->pos));
  return 1;
  l6:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "whitespace", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_modifiers(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "modifiers"));
  {  int yypos14= ctx->pos, yythunkpos14= ctx->thunkpos;  if (!yy_whitespace(ctx)) goto l14;  goto l15;
  l14:;	  ctx->pos= yypos14; ctx->thunkpos= yythunkpos14;
  }
  l15:;	
  {  int yypos16= ctx->pos, yythunkpos16= ctx->thunkpos;  if (!yymatchString(ctx, "const")) goto l17;  goto l16;
  l17:;	  ctx->pos= yypos16; ctx->thunkpos= yythunkpos16;  if (!yymatchString(ctx, "(macro)")) goto l13;
  }
  l16:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "modifiers", ctx->buf+ctx->pos));
  return 1;
  l13:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "modifiers", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_funcargs(yycontext *ctx)
{
  yyprintf((stderr, "%s\n", "funcargs"));
  l19:;	
  {  int yypos20= ctx->pos, yythunkpos20= ctx->thunkpos;
  {  int yypos21= ctx->pos, yythunkpos21= ctx->thunkpos;  if (!yymatchChar(ctx, ')')) goto l21;  goto l20;
  l21:;	  ctx->pos= yypos21; ctx->thunkpos= yythunkpos21;
  }  if (!yymatchDot(ctx)) goto l20;  goto l19;
  l20:;	  ctx->pos= yypos20; ctx->thunkpos= yythunkpos20;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "funcargs", ctx->buf+ctx->pos));
  return 1;
}
YY_RULE(int) yy_funcnametype(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "funcnametype"));
  {  int yypos23= ctx->pos, yythunkpos23= ctx->thunkpos;  if (!yymatchChar(ctx, '*')) goto l23;  goto l22;
  l23:;	  ctx->pos= yypos23; ctx->thunkpos= yythunkpos23;
  }
  l24:;	
  {  int yypos25= ctx->pos, yythunkpos25= ctx->thunkpos;
  {  int yypos26= ctx->pos, yythunkpos26= ctx->thunkpos;  if (!yymatchString(ctx, "operator()")) goto l27;  goto l26;
  l27:;	  ctx->pos= yypos26; ctx->thunkpos= yythunkpos26;
  {  int yypos28= ctx->pos, yythunkpos28= ctx->thunkpos;  if (!yymatchChar(ctx, '(')) goto l28;  goto l25;
  l28:;	  ctx->pos= yypos28; ctx->thunkpos= yythunkpos28;
  }  if (!yymatchDot(ctx)) goto l25;
  }
  l26:;	  goto l24;
  l25:;	  ctx->pos= yypos25; ctx->thunkpos= yythunkpos25;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "funcnametype", ctx->buf+ctx->pos));
  return 1;
  l22:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "funcnametype", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_functionfooter(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "functionfooter"));  if (!yy_content(ctx)) goto l29;
  yyprintf((stderr, "  ok   %s @ %s\n", "functionfooter", ctx->buf+ctx->pos));
  return 1;
  l29:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "functionfooter", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_functionheader(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "functionheader"));  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_BEGIN)) goto l30;  if (!yy_funcnametype(ctx)) goto l30;  if (!yymatchChar(ctx, '(')) goto l30;  if (!yy_funcargs(ctx)) goto l30;  if (!yymatchChar(ctx, ')')) goto l30;
  {  int yypos31= ctx->pos, yythunkpos31= ctx->thunkpos;  if (!yy_modifiers(ctx)) goto l31;  goto l32;
  l31:;	  ctx->pos= yypos31; ctx->thunkpos= yythunkpos31;
  }
  l32:;	
  {  int yypos33= ctx->pos, yythunkpos33= ctx->thunkpos;  if (!yymatchChar(ctx, ';')) goto l33;  goto l34;
  l33:;	  ctx->pos= yypos33; ctx->thunkpos= yythunkpos33;
  }
  l34:;	  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_END)) goto l30;
  {  int yypos35= ctx->pos, yythunkpos35= ctx->thunkpos;  if (!yy_whitespace(ctx)) goto l35;  goto l36;
  l35:;	  ctx->pos= yypos35; ctx->thunkpos= yythunkpos35;
  }
  l36:;	  if (!yy_EOL(ctx)) goto l30;  yyDo(ctx, yy_1_functionheader, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "functionheader", ctx->buf+ctx->pos));
  return 1;
  l30:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "functionheader", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_macroheader(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "macroheader"));  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_BEGIN)) goto l37;  if (!yymatchString(ctx, "macro")) goto l37;  if (!yy_whitespace(ctx)) goto l37;  if (!yy_linecontent(ctx)) goto l37;  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_END)) goto l37;  if (!yy_EOL(ctx)) goto l37;  yyDo(ctx, yy_1_macroheader, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "macroheader", ctx->buf+ctx->pos));
  return 1;
  l37:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "macroheader", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_EOL(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "EOL"));
  {  int yypos39= ctx->pos, yythunkpos39= ctx->thunkpos;  if (!yymatchString(ctx, "\r\n")) goto l40;  goto l39;
  l40:;	  ctx->pos= yypos39; ctx->thunkpos= yythunkpos39;  if (!yymatchChar(ctx, '\n')) goto l41;  goto l39;
  l41:;	  ctx->pos= yypos39; ctx->thunkpos= yythunkpos39;  if (!yymatchChar(ctx, '\r')) goto l38;
  }
  l39:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "EOL", ctx->buf+ctx->pos));
  return 1;
  l38:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EOL", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_linecontent(yycontext *ctx)
{
  yyprintf((stderr, "%s\n", "linecontent"));
  l43:;	
  {  int yypos44= ctx->pos, yythunkpos44= ctx->thunkpos;
  {  int yypos45= ctx->pos, yythunkpos45= ctx->thunkpos;  if (!yy_EOL(ctx)) goto l45;  goto l44;
  l45:;	  ctx->pos= yypos45; ctx->thunkpos= yythunkpos45;
  }  if (!yymatchDot(ctx)) goto l44;  goto l43;
  l44:;	  ctx->pos= yypos44; ctx->thunkpos= yythunkpos44;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "linecontent", ctx->buf+ctx->pos));
  return 1;
}
YY_RULE(int) yy_content(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "content"));  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_BEGIN)) goto l46;
  l47:;	
  {  int yypos48= ctx->pos, yythunkpos48= ctx->thunkpos;
  {  int yypos49= ctx->pos, yythunkpos49= ctx->thunkpos;  if (!yy_contentline(ctx)) goto l50;  goto l49;
  l50:;	  ctx->pos= yypos49; ctx->thunkpos= yythunkpos49;  if (!yy_blankline(ctx)) goto l48;
  }
  l49:;	  goto l47;
  l48:;	  ctx->pos= yypos48; ctx->thunkpos= yythunkpos48;
  }  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_END)) goto l46;  yyDo(ctx, yy_1_content, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "content", ctx->buf+ctx->pos));
  return 1;
  l46:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "content", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_sectiontitle(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "sectiontitle"));  if (!yymatchString(ctx, "    ")) goto l51;  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_BEGIN)) goto l51;  if (!yy_linecontent(ctx)) goto l51;  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_END)) goto l51;  if (!yy_EOL(ctx)) goto l51;  yyDo(ctx, yy_1_sectiontitle, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "sectiontitle", ctx->buf+ctx->pos));
  return 1;
  l51:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "sectiontitle", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_blankline(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "blankline"));
  {  int yypos53= ctx->pos, yythunkpos53= ctx->thunkpos;  if (!yy_whitespace(ctx)) goto l53;  goto l54;
  l53:;	  ctx->pos= yypos53; ctx->thunkpos= yythunkpos53;
  }
  l54:;	  if (!yy_EOL(ctx)) goto l52;
  yyprintf((stderr, "  ok   %s @ %s\n", "blankline", ctx->buf+ctx->pos));
  return 1;
  l52:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "blankline", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_stars(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "stars"));  if (!yymatchString(ctx, "*******************************************************************************")) goto l55;  if (!yy_EOL(ctx)) goto l55;
  yyprintf((stderr, "  ok   %s @ %s\n", "stars", ctx->buf+ctx->pos));
  return 1;
  l55:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "stars", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_function(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "function"));
  {  int yypos57= ctx->pos, yythunkpos57= ctx->thunkpos;  if (!yy_macroheader(ctx)) goto l58;  goto l57;
  l58:;	  ctx->pos= yypos57; ctx->thunkpos= yythunkpos57;  if (!yy_functionheader(ctx)) goto l56;
  }
  l57:;	
  {  int yypos59= ctx->pos, yythunkpos59= ctx->thunkpos;  if (!yy_functionfooter(ctx)) goto l59;  goto l60;
  l59:;	  ctx->pos= yypos59; ctx->thunkpos= yythunkpos59;
  }
  l60:;	
  l61:;	
  {  int yypos62= ctx->pos, yythunkpos62= ctx->thunkpos;  if (!yy_EOL(ctx)) goto l62;  goto l61;
  l62:;	  ctx->pos= yypos62; ctx->thunkpos= yythunkpos62;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "function", ctx->buf+ctx->pos));
  return 1;
  l56:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "function", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_groupopening(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "groupopening"));  if (!yy_stars(ctx)) goto l63;  if (!yy_blankline(ctx)) goto l63;  if (!yy_sectiontitle(ctx)) goto l63;  if (!yy_blankline(ctx)) goto l63;  if (!yy_content(ctx)) goto l63;  if (!yy_stars(ctx)) goto l63;
  yyprintf((stderr, "  ok   %s @ %s\n", "groupopening", ctx->buf+ctx->pos));
  return 1;
  l63:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "groupopening", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_comments(yycontext *ctx)
{
  yyprintf((stderr, "%s\n", "comments"));
  l65:;	
  {  int yypos66= ctx->pos, yythunkpos66= ctx->thunkpos;
  {  int yypos67= ctx->pos, yythunkpos67= ctx->thunkpos;  if (!yy_whitespace(ctx)) goto l68;  goto l67;
  l68:;	  ctx->pos= yypos67; ctx->thunkpos= yythunkpos67;  if (!yy_EOL(ctx)) goto l69;  goto l67;
  l69:;	  ctx->pos= yypos67; ctx->thunkpos= yythunkpos67;  if (!yy_comment(ctx)) goto l66;
  }
  l67:;	  goto l65;
  l66:;	  ctx->pos= yypos66; ctx->thunkpos= yythunkpos66;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "comments", ctx->buf+ctx->pos));
  return 1;
}
YY_RULE(int) yy_group(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "group"));  if (!yy_comments(ctx)) goto l70;  if (!yy_groupopening(ctx)) goto l70;  if (!yy_comments(ctx)) goto l70;
  l71:;	
  {  int yypos72= ctx->pos, yythunkpos72= ctx->thunkpos;  if (!yy_function(ctx)) goto l72;  goto l71;
  l72:;	  ctx->pos= yypos72; ctx->thunkpos= yythunkpos72;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "group", ctx->buf+ctx->pos));
  return 1;
  l70:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "group", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_start(yycontext *ctx)
{
  yyprintf((stderr, "%s\n", "start"));
  l74:;	
  {  int yypos75= ctx->pos, yythunkpos75= ctx->thunkpos;  if (!yy_group(ctx)) goto l75;  goto l74;
  l75:;	  ctx->pos= yypos75; ctx->thunkpos= yythunkpos75;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "start", ctx->buf+ctx->pos));
  return 1;
}

#ifndef YY_PART

typedef int (*yyrule)(yycontext *ctx);

YY_PARSE(int) YYPARSEFROM(YY_CTX_PARAM_ yyrule yystart)
{
  int yyok;
  if (!yyctx->buflen)
    {
      yyctx->buflen= 1024;
      yyctx->buf= (char *)malloc(yyctx->buflen);
      yyctx->textlen= 1024;
      yyctx->text= (char *)malloc(yyctx->textlen);
      yyctx->thunkslen= 32;
      yyctx->thunks= (yythunk *)malloc(sizeof(yythunk) * yyctx->thunkslen);
      yyctx->valslen= 32;
      yyctx->vals= (YYSTYPE *)malloc(sizeof(YYSTYPE) * yyctx->valslen);
      yyctx->begin= yyctx->end= yyctx->pos= yyctx->limit= yyctx->thunkpos= 0;
    }
  yyctx->begin= yyctx->end= yyctx->pos;
  yyctx->thunkpos= 0;
  yyctx->val= yyctx->vals;
  yyok= yystart(yyctx);
  if (yyok) yyDone(yyctx);
  yyCommit(yyctx);
  return yyok;
}

YY_PARSE(int) YYPARSE(YY_CTX_PARAM)
{
  return YYPARSEFROM(YY_CTX_ARG_ yy_start);
}

#endif
